# proj-theseus

./: .cursorrules  .env  .env.example  .gitignore  .graphifyignore  .prettierignore  ALGORITHM_7_FIX_SUMMARY.md  ARCHITECTURE_REDESIGN_STATUS.md  BRANCH_004_COMPLETION.md  BRANCH_005_HANDOFF.md  BRANCH_005_OPTIMIZATION_HANDOFF.md  CLEANUP_PLAN.md  HANDOFF_SUMMARY.md  MINERU_HANDOFF.md  PROMPT_CENTRALIZATION_SUMMARY.md  PROMPT_RESTORATION_PLAN.md  README (Ariadne).md  README.md  README_REFACTOR.md  Roadmap.md  SKILLS_E2E_ROADMAP.md  analysis_report.md  analyze_annexes.py  analyze_chunk_coverage.py  analyze_corrections.py  analyze_entity_types.py  analyze_extraction.py  analyze_graphml.py  analyze_invalid_types.py  analyze_iter8.py  analyze_option_a.py  analyze_orphan_patterns.py  analyze_orphan_patterns_holistic.py  analyze_orphan_properties.py  analyze_orphaned_nodes.py  analyze_race_condition.py  analyze_relationship_sources.py  app.py  assess_baseline.py  assess_fresh_extraction.py  (+77 more)
.cursor/: analyze_appendix_coverage.py  analyze_query_data.py  analyze_query_data_narrative.py  call_query_data.py  count_appendix_sections.py  fetch_query_data.py  fetch_scope_with_chunks.py  q_scope_query_data.json  q_scope_query_data_with_chunks.json  q_service_query_data.json  query_data_narrative_candidates.txt  tally_entity_types.py  tmp_query_data.json
.cursor/plans/: capture_agent_suite_c5694011.plan.md  codebase_cleanup_overhaul_9051eb5b.plan.md  govcon_capture_intelligence_ui_dabfd84c.plan.md  update_performance_metrics_fecf3a24.plan.md
.cursor/rules/: framework-fidelity.mdc  ontology-protection.mdc  ontology-sacred.mdc  prompt-protection.mdc  prompts-sacred.mdc
.github/: AGENTS_README.md  ISSUE_30_ENTITY_ONTOLOGY.md  ISSUE_31_DRY_REFACTORING.md  ISSUE_COMMENT.md  QUICKSTART_ISSUE_17.md  SETUP_GUIDE.md  copilot-instructions.md  plan-template.md
.github/agents/: implement.agent.md  (+2 more)
docs/: .shipley_extracted.json  AMENDMENT_HANDLING_ROADMAP.md  ARCHITECTURE.md  ARCHITECTURE_REDESIGN_MASTER_PLAN.md  BASELINE_ISS_RFP_20251109.md  BRANCH_003_IMPLEMENTATION.md  BRANCH_004_CODE_OPTIMIZATION.md  BRANCH_004_FINAL_REPORT.md  BRANCH_004_IMPLEMENTATION.md  BRANCH_005_ENTITY_TYPE_FIX.md  BRANCH_005_FINAL_CLEANUP_PLAN.md  BRANCH_006_COMPLETION.md  BRANCH_006_IMPLEMENTATION_PLAN.md  BRANCH_010_BASELINE_METRICS.md  BRANCH_010_PIVOT.md  BRANCH_011_KEYWORD_ENHANCEMENT_RESULTS.md  BRANCH_011_OPTION_A_ASSESSMENT.md  BRANCH_013A_ID_BASED_RELATIONSHIPS.md  BRANCH_013B_WORKLOAD_SEMANTIC_FIXES.md  BRANCH_017_FIXES.md  BRANCH_022A_TABLE_ONTOLOGY.md  BRANCH_022B_MULTIMODAL_ONTOLOGY_PLAN.md  CAPTURE_INTELLIGENCE_PATTERNS.md  ENHANCEMENT_FRAMEWORK.md  EXTRACTION_ADJUDICATION_PLAN.md  FINE_TUNING_ROADMAP.md  FUTURE_AGENT_ARCHITECTURE.md  GROK_4_1_MIGRATION_PLAN.md  ISSUE_RESET_TO_BRANCH_021.md  LESSONS_LEARNED_021_040.md  LIGHTRAG_JSON_EXTRACTION_ROADMAP.md  LIGHTRAG_MULTIDIGRAPH_FIX_RESOLVED.md  LIGHTRAG_PATCH_NOTES.md  MINERU_3X_INTEGRATION_ASSESSMENT.md  MINERU_SETUP_GUIDE.md  MULTIMODAL_ONTOLOGY_IMPLEMENTATION_PLAN.md  Multiple Critical Features.md  NEXT_CONVERSATION_PROMPT.md  OLLAMA_WORKER_REFRESH.md  ONTOLOGY_ALIGNMENT_ANALYSIS.md  (+54 more)
graph_node_edits/: MANUAL_EDITING_TOOLS.md  README.md
logs/: .gitkeep  README.md  test_json_extraction.out.txt  test_schema_prompts.out.txt
planA_rag_storage/: graph_chunk_entity_relation.graphml  kv_store_doc_status.json  kv_store_full_docs.json  kv_store_full_entities.json  kv_store_full_relations.json  kv_store_text_chunks.json  vdb_chunks.json
prompts/: extract_requirements_prompt.txt  govcon_prompt.py  shipley_requirements_extraction.txt
src/: __init__.py  govcon_rag.py  llm_relationship_inference.py  phase6_prompts.py  raganything_server.py  server.py  ucf_detector.py  ucf_extractor.py  ucf_section_processor.py
src/lightrag/: pyproject.toml
src/lightrag/api/: lightrag_server.py
src/lightrag/govcon/: ontology_integration.py
tests/: TEST_SCRIPTS_README.md  measure_assembled_prompt_tokens.py  measure_entity_extraction_tokens.py  measure_entity_rules_tokens.py  quick_validation.py  run_id_based_test.py  run_multi_llm.py  table_entity_retrieval_results.txt  test_algorithm_7_cdrl_patterns.py  test_algorithm_7_performance.py  test_boe_models.py  test_chat_store.py  test_chat_ui_routes.py  test_compressed_prompts.py  test_dashboard_stats.py  test_defaults_alignment_guardrails.py  test_deliverable_traceability.py  test_deliverable_traceability_mock.py  test_entity_chunk_routes.py  test_eval_queries_integration.py  test_extraction_postprocess.py  test_format_policy.py  test_graph_snapshot.py  test_json_extraction.py  test_kg_processor.py  test_lightrag_defaults_restored.py  test_max_gleaning_config.py  test_modular_algorithms.py  test_multi_llm.py  test_neo4j_config.py  test_neo4j_postprocessing.py  test_neo4j_records.py  test_output_sanitizer_enhanced.py  test_phase3_quality_gates.py  test_phase3a_dryrun.py  test_phase3b_dryrun.py  test_processing_log_routes.py  test_prompt_compression_baseline.py  test_prompt_compression_presence.py  test_prompt_library.py  (+23 more)
theseus-skills/: README.md
tools/: QUALITY_ASSESSMENT_FINAL.md  README.md  _build_json_prompt.py  _inspect_lm_edges.py  _inspect_prompt_xlsx.py  _smoke_emit.py  _smoke_phase0_tuple_mode.py  _validate_json_prompt.py  analyze_entity_structure.py  analyze_orphans.py  analyze_prompt_structure.py  analyze_vdb_retrieval.py  audit_skill_grounding.py  bootstrap_ontology.py  check_adab_chunks.py  check_adab_retrieval_gap.py  check_all_embeddings.py  check_cdrl_duplicates.py  check_child_of.py  check_child_of_rels.py  check_chunk_entities.py  check_content_lengths.py  check_entity_dist.py  check_graph_connectivity.py  check_heuristic_mapping.py  check_kv_tables.py  check_lightrag_entity_storage.py  check_neo4j_tables.py  check_page_53_chunks.py  check_parse_cache.py  check_relationship_structure.py  check_single_vdb_entry.py  check_swa_entities.py  check_swa_tas_rels.py  check_table_context.py  check_table_details.py  check_table_entity_types.py  check_table_relations.py  check_table_vectors.py  check_vdb_content.py  (+70 more)
(+700 files in other folders)
