[project]
name = "govcon-capture-vibe"
version = "0.3.0"
description = "Cloud-optimized government contracting RFP analysis using RAG-Anything + LightRAG with xAI Grok"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Core RAG functionality (includes lightrag-hku, MinerU, and document parsers)
    # v1.2.9: MinerU 2.7.x filepath compat (PR #188), status case-mismatch fix,
    #         full file_path metadata, init/parsing bug fixes, folder-complete enhancement
    "raganything[all]>=1.2.9",
    # MinerU document parser - EXPLICIT constraint to prevent downgrade
    # v2.7.6: hybrid-auto-engine backend (direct text extraction for text-layer PDFs),
    #         cross-page table merge fix (see initialization.py MINERU_TABLE_MERGE_ENABLE),
    #         CVE-2025-64512 pdfminer.six patch, EXIF orientation fix, timeout fix
    "mineru[core]>=2.7.6",
    # MinerU runtime dependencies not properly declared in mineru[core]
    # (MinerU OCR postprocess imports these directly.)
    "shapely>=2.0.0",
    "pyclipper>=1.3.0.post6",
    # Needed for loading some upstream serialized model artifacts
    "dill>=0.3.8",
    # MinerU OCR config loader imports OmegaConf at runtime
    "omegaconf>=2.3.0",
    "doclayout-yolo>=0.0.4",
    # MinerU pipeline backend imports ultralytics.YOLO
    "ultralytics>=8.0.0",
    # LightRAG with RAG-Anything compatibility
    # v1.4.9.11: hot-fix (OpenAI binding env vars), WebUI token auto-renewal,
    #            DOCX table whitespace via HTML tags
    "lightrag-hku>=1.4.9.11",
    # Cloud LLM access (xAI Grok via OpenAI-compatible API)
    # TODO (#77): openai==2.8.1 is currently installed despite <2.0.0 pin.
    # Pending investigation of instructor + LightRAG compatibility before
    # deciding to pin v1 strictly or migrate to v2 API.
    "openai>=1.70.0,<2.0.0",
    # xAI SDK for native Grok integration
    "xai-sdk>=1.5.0",
    # Instructor for Pydantic-validated LLM extraction with automatic retry
    "instructor>=1.3.2",
    # Server framework
    "fastapi>=0.118.0",
    "uvicorn>=0.37.0",
    # Configuration management
    "python-dotenv>=1.0.0",
    # Authentication (required by lightrag-hku API server)
    "PyJWT>=2.10.0",
    # Neo4j graph database driver
    "neo4j>=5.0.0",
    # ============================================================================
    # GPU Acceleration for MinerU (CRITICAL for performance)
    # ============================================================================
    # PyTorch with CUDA 12.4 - installed from pytorch-cu124 index via [tool.uv.sources]
    # Without CUDA-enabled PyTorch, MinerU falls back to CPU-only processing:
    #   - CPU-only: ~5-10 minutes for 425-page RFP (SLOW)
    #   - GPU-accelerated: ~30-60 seconds for same document (2-10x faster)
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "python-multipart>=0.0.21",
    "transformers>=4.57.3",
    "accelerate>=1.12.0",
    "ftfy>=6.3.1",
    # transformers (and other HF libs) currently require huggingface-hub <1.0
    "huggingface-hub>=0.34.0,<1.0.0",
]

# ============================================================================
# UV Package Index Configuration (CUDA-enabled PyTorch)
# ============================================================================
[tool.uv]
# Use PyTorch CUDA 12.4 index for GPU acceleration

# Override resolution to force compatible versions
# LightRAG 1.4.9.11 has numpy<2.0.0 constraint but MinerU 2.7.6+ needs numpy>=2.1.0
# LightRAG only uses numpy for simple ndarray returns, works fine with numpy 2.x
override-dependencies = [
    "lightrag-hku>=1.4.9.11",
    "mineru>=2.7.6",
    "numpy>=2.1.0,<2.4.0",  # Override LightRAG's <2.0.0 constraint (also keep OpenCV compatible)
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
# Override torch/torchvision to use CUDA 12.4 builds
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }

# Note: raganything[all] bundles the following dependencies:
# - lightrag-hku (knowledge graph + WebUI)
# - MinerU (multimodal document parsing with GPU acceleration via PyTorch)
# - pypdf, python-docx, python-pptx, openpyxl (document parsers)
# - pydantic, tiktoken, nest-asyncio (utilities)
# - ollama (local LLM support)
#
# torch/torchvision are explicitly declared above with [tool.uv.sources] to ensure
# CUDA 12.4 builds are installed from the PyTorch index instead of CPU-only PyPI versions.
