[project]
name = "govcon-capture-vibe"
version = "0.3.0"
description = "Cloud-optimized government contracting RFP analysis using RAG-Anything + LightRAG with xAI Grok"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Core RAG functionality (includes lightrag-hku, mineru[core], and document parsers)
    "raganything[all]>=1.2.10",
    # LightRAG knowledge graph engine (explicit pin for Neo4j workspace features)
    "lightrag-hku>=1.4.13",
    # Cloud LLM access (xAI Grok via OpenAI-compatible API)
    # v2.x required by instructor >=1.15 and LightRAG >=1.4.13
    "openai>=2.0.0,<3.0.0",
    # xAI SDK for native Grok integration
    "xai-sdk>=1.5.0",
    # Instructor for Pydantic-validated LLM extraction with automatic retry
    "instructor>=1.15.0",
    # Server framework
    "fastapi>=0.118.0",
    "uvicorn>=0.37.0",
    # Configuration management
    "python-dotenv>=1.0.0",
    # Authentication (required by lightrag-hku API server)
    "PyJWT>=2.10.0",
    "bcrypt>=4.0.0",
    # Neo4j graph database driver
    "neo4j>=5.0.0",
    # ============================================================================
    # GPU Acceleration for MinerU (CRITICAL for performance)
    # ============================================================================
    # PyTorch with CUDA 12.4 - installed from pytorch-cu124 index via [tool.uv.sources]
    # Without CUDA-enabled PyTorch, MinerU falls back to CPU-only processing:
    #   - CPU-only: ~5-10 minutes for 425-page RFP (SLOW)
    #   - GPU-accelerated: ~30-60 seconds for same document (2-10x faster)
    "torch>=2.6.0",
    "torchvision>=0.20.0",
    "python-multipart>=0.0.21",
    "transformers>=4.57.3",
    "accelerate>=1.12.0",
    "ftfy>=6.3.1",
    # transformers (and other HF libs) currently require huggingface-hub <1.0
    "huggingface-hub>=0.34.0,<1.0.0",
]

# ============================================================================
# UV Package Index Configuration (CUDA-enabled PyTorch)
# ============================================================================
[tool.uv]
# Use PyTorch CUDA 12.4 index for GPU acceleration

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
# Override torch/torchvision to use CUDA 12.4 builds
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }

# Note: raganything[all]>=1.2.10 bundles:
# - lightrag-hku (knowledge graph + WebUI)
# - mineru[core] (MinerU 3.x multimodal document parsing - includes shapely,
#   pyclipper, dill, omegaconf, torch, torchvision, transformers in [pipeline] extra)
# - Pillow, reportlab, paddleocr, weasyprint, pygments (format extras)
# 
# torch/torchvision are explicitly declared above with [tool.uv.sources] to ensure
# CUDA 12.4 builds are installed from the PyTorch index instead of CPU-only PyPI versions.
