[project]
name = "lightrag-govcon"
version = "1.0.0-alpha"
description = "Government Contracting Fork of LightRAG with ontology integration and worker refresh"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "BdM-15"},
]
dependencies = [
    "numpy>=1.24.0",
    "ollama>=0.6.0",
    "openai>=1.12.0",
    "tenacity>=8.2.3",
    "tiktoken>=0.5.2",
    "pydantic>=2.0.0",
    "nano-vectordb>=0.0.3",
    "networkx>=3.0",
    "aioboto3>=13.0.1",
    "hnswlib>=0.8.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
